# code-like-a-pro-in-rust-book

./: .rustfmt.toml  LICENSE  README.md
.github/workflows/: build-and-test.yml
c02/patch-num-cpus/: Cargo.toml
c02/patch-num-cpus/num_cpus/: Cargo.toml
c02/patch-num-cpus/num_cpus/src/: lib.rs
c02/rustdoc-example/: Cargo.toml
c02/rustdoc-example/src/: lib.rs
c02/workspaces-example/: Cargo.toml
c02/workspaces-example/subproject/: Cargo.toml
c02/zlib-wrapper/src/: main.rs
c04/borrowed-vec/src/: main.rs
c04/compound-key/: Cargo.toml
c04/compound-key/src/: main.rs
c04/custom-hash-function/: Cargo.toml
c04/custom-hash-function/src/: main.rs
c04/enums/: Cargo.toml
c04/error-conversion/src/: main.rs
c04/error-handling/: Cargo.toml
c04/integer-types/src/: main.rs
c04/movable-or-not/src/: main.rs
c04/slices-and-arrays/src/: main.rs
c04/string-wrapper/: Cargo.toml
c04/string-wrapper/src/: main.rs
c04/tuple-basics/: Cargo.toml
c04/tuple-basics/src/: main.rs
c04/tuple-swap/: Cargo.toml
c04/unchecked-arithmetic/src/: main.rs
c05/basicallocator/: Cargo.toml
c05/copies/: Cargo.toml
c05/doublylinkedlist/: Cargo.toml
c05/passthruallocator/: Cargo.toml
c05/shallow-and-deep-copies/: Cargo.toml
c05/singlylinkedlist/: Cargo.toml
c05/singlylinkedlist-immutable/: Cargo.toml
c06/: tarpaulin-report.html
c06/proptest/: .gitignore  Cargo.toml
c06/wrapping-adder/: .gitignore  Cargo.toml
c07/quicksort/: Cargo.toml
c08/async-observer/: Cargo.toml
c08/describe-type/: Cargo.toml
c08/fire-and-forget/: Cargo.toml
c08/functional-tour/: Cargo.toml
c08/trait-objects/: Cargo.toml
c08/wait-future-without-await/: Cargo.toml
c09/api-service/: .gitignore  Cargo.toml
c09/api-service/migrations/: 20230701202642_todos.sql
c09/api-service/src/: api.rs  error.rs  main.rs  router.rs  todo.rs
c09/callbacks/: Cargo.toml
c10/10.6/session-state-machine/: Cargo.toml
c10/10.6/session-state-machine/src/: lib.rs
c10/api-client/: Cargo.toml
c10/api-client/src/: main.rs
c10/buffer/: Cargo.toml
c10/print-name/: Cargo.toml
c10/struct-tagging/: Cargo.toml
c11/async-sleep/: Cargo.toml
c11/mixed-file-io/: Cargo.toml
c11/parallelism/: Cargo.toml
c11/sync-sleep/: Cargo.toml
c12/parallelization-with-rayon/: Cargo.toml
c4/4.5/: divide_by_zero.c
c6/6.8/: tarpaulin-report.html
c7/7.4/quicksort-cli/: Cargo.toml
c7/7.4/quicksort-cli/tests/fixtures/1/: args
c7/7.4/quicksort-cli/tests/fixtures/2/: args  expected
c7/7.4/quicksort-cli/tests/fixtures/3/: args  expected
(+165 files in other folders)
