[package]
name = "patch-num-cpus"
version = "0.1.0"
authors = ["Brenden Matthews <brenden@brndn.io>"]
edition = "2018"

[dependencies]
num_cpus = { git = "https://github.com/brndnmtthws/num_cpus", rev = "b423db0a698b035914ae1fd6b7ce5d2a4e727b46" }

[patch.crates-io]
libc = { git = "https://github.com/rust-lang/libc", tag = "0.2.88" }
